# brokit

./: 01_prompt.ipynb  02_lm.ipynb  03_predictor.ipynb  04_shot.ipynb  README.md  ROADMAP.md  VERSIONS.md  main.py  pyproject.toml
.github/workflows/: release.yml
brokit/: __init__.py
brokit/primitives/: formatter.py  history.py  lm.py  predictor.py  program.py  prompt.py  shot.py  types.py
brokit/primitives/lm/: core.py  types.py
brokit/primitives/predictor/: core.py  types.py
brokit/primitives/prompt/: core.py  types.py
cookbook/lm/: bedrock.ipynb  ollama.ipynb  test.ipynb
cookbook/predictor/: few_shots.ipynb  zero_shot.ipynb
cookbook/program/: simple_program.ipynb
study/: SUMMARY.md  caching_mechanism.md  configure-pattern.md  custom_optimizer.md  example_object.md
