[project]
name = "brokit"
version = "0.1.1"
description = "brokit, think it like a playing lego"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["brokit"]

[dependency-groups]
dev = [
    "boto3>=1.42.39",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
]
